improve text with constants